<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_loader"
        android:layout_width="match_parent"
        android:background="@color/progress_background"
        android:visibility="invisible"
        android:elevation="16dp"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:padding="16dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Text.Header"
            />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/underlogin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            style="@style/Text.Medium"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_login"

            app:layout_constraintTop_toBottomOf="@id/underlogin_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Text.Medium"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/login_text_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/Text.Medium"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/password_text_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/continue_text"
            android:fontFamily="@font/roboto_bold"
            style="@style/Widget.Material3.Button.ElevatedButton"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>