<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_loader"
        android:layout_width="match_parent"
        android:background="@color/progress_background"
        android:visibility="invisible"
        android:elevation="16dp"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_text"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Text.Header"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/profile_title"
        style="@style/Text.Medium"
        tools:text="loginasd"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_payments_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/payments"
        app:layout_constraintTop_toBottomOf="@id/profile_login_text"
        style="@style/Text.Header"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/profile_payments_text"
        app:layout_constraintBottom_toTopOf="@id/logout_button"
        tools:listitem="@layout/item_recycler_payments"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/logout"
        style="@style/Button"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>